--- a/kpfSBERT/.gitattributes
+++ b/kpfSBERT/.gitattributes
@@ -1,2 +1,3 @@
 C:/Users/User-Pc/output/kpfSBERT/pytorch_model.bin filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
+C:/Users/User-Pc/test/kpfSBERT/pytorch_model.bin filter=lfs diff=lfs merge=lfs -text
